# BigWham_dev

./: .dir-locals.el  .gitignore  .gitmodules  API.md  CITATION.cff  CLAC.txt  CLAI.txt  CMakeLists.txt  CONTRIBUTING.md  CompilingWIthCUDASupport.md  DesignDiscussion.md  Dockerfile  LICENSE  LICENSE.TXT  Manifest.toml  Notes  Project.toml  README.md  Readme.md  main.cc  main.cpp  mainOLD.cpp  mkdocs.yml  setup.py  test.cpp
Hmat-lib/cluster/: cluster.h
Hmat-lib/compression/: adaptiveCrossApproximation.h  routines.h  toHMatrix.h
Hmat-lib/hmatrix/: HMatrix.h  HMatrixNode.h  HMatrixType.h  HMatrixUtils.h  LowRank.h
Hmat-lib/linearAlgebra/blas/: hblas.h  hdot copy.hold.h  hdot.h  hdot_tbb_copy.h  hsolve.h
Hmat-lib/linearAlgebra/factorization/: lowRankApproximation.cpp  lowRankApproximation.h  luDecomposition.h
cmake/: BigWhamTools.cmake  FindITT.cmake  ltemplate.cmake
docs/: about.md  index.md
docs/api/: api.md
docs/examples/: griffith_crack.md  user_api.md
docs/installation/: macos.md  ubuntu.md
docs/misc/: helper.md
il/: CMakeLists.txt
il/il/: Tree.h  math.h
il/il/core/: core.h
il/il/random/: gaussianmatrix.h
il/prettyPrint/lldb/: lldbinit
interfaces/BigWhamLink/: BigWhamLink.nb  Readme.md
interfaces/bigwham4py/: bigwham4py.py
interfaces/bigwham4py/_test/: binding_test.py
interfaces/bigwham4py/src/: bigwhamPybind.cpp
interfaces/julia/: CMakeLists.txt  Project.toml  bigwham4jl.jl  jl_bigwham.cc
interfaces/mathematica/: BigWhamLink-RunTests.nb  CMakeLists.txt  PacletInfo.m  compile.m
interfaces/mathematica/BigWhamLink/Examples/: 3DT0_Dof_Scaling.nb
interfaces/mathematica/BigWhamLink/Examples/StaticCrackBenchmarks/2D/: Arc-Crack-Plane-strain.nb  Star-Crack-Plane-strain.nb
interfaces/mathematica/BigWhamLink/Examples/StaticCrackBenchmarks/3D/: 3DT0_penny_shaped_crack.nb  Un.csv  conn.csv
interfaces/mathematica/BigWhamLink/Kernel/: BigWhamLink.m  BuildSettings.m
interfaces/mathematica/BigWhamLink/LibraryResources/Source/: HMatExpr.h
interfaces/mathematica/BigWhamLink/Tests/: BigWhamLink.nb  GriffithCrack-2D.nb  Tests-API-3D.nb
interfaces/python/: CMakeLists.txt  bigwham4py.py  bigwhamPybind.cpp  bigwham_pybind.cc  hmatrix.py  hmatrix_rectangular.py  py_bigwham.cc  py_bigwham_helper.h  setup.py
interfaces/python/_test/: pybinding_checks.py
interfaces/python/bigwham4py/: __init__.py  bigwham4py.py
interfaces/python/examples/: example_3DR0_kernel.py
interfaces/python/src/: bigwhamPybind.cpp
pybind_test/: binding_test.py
src/: BigWham.h  BigWhamIO.h  CMakeLists.txt  bigwham_io.h  bigwham_io_old.h  main.cc  pypart.cpp  pyparty.cpp  test.cpp
src/_dev_example/: CMakeLists.txt  generate_penny_mesh.py  griffithcrack-2d.cpp  mat_vec.cc  mat_vec_contiguous.cc  mat_vec_gpu.cc  mat_vec_gpu_getMemoryRequirement.cc  mat_vec_selection.cc  npy_tools.h  rep_test.cpp  rep_test.py  test.py  test_contiguous_array2d_vector.cpp
src/_test/: CMakeLists.txt  Gtests-main.cc  bigwhamio_test_2d.cc  bigwhamio_tests_2d.cpp  cuda_get_num_devices.cu  elastic3DR0_element_benchmark.cpp  elastic3DR0_element_benchmark.h  penny_shaped_crack_analytical_sol.cpp  penny_shaped_crack_analytical_sol.h  penny_shaped_crack_analytical_sol_benchmark.cpp  penny_shaped_crack_sol.h
src/binding/: bigwham4py.cpp  bigwham4py.py
src/binding/_test/: binding_test.py
src/core/: BEMesh.h  BIE_Kernel.h  BieKernel.h  BoundaryElement.h  CMakeLists.txt  FaceData.cc  FaceData.cpp  FaceData.h  Mesh2D.cpp  Mesh2D.h  Mesh3D.cpp  Mesh3D.h  SegmentData.h  SquareMatrixGenerator.h  TriangularElementData.cc  TriangularElementData.h  be_mesh.cc  be_mesh.h  bie_kernel.h  boundary_element.h  elastic_properties.h  element_utilities.cpp  hierarchical_representation.h  mesh.h
src/core/_test/: BEmesh_tests.cpp  FaceData_tests.cpp  bemesh_test.cc  domain_mesh_test.cpp  hierarchical_representation_test.cc  hierarchical_representation_tests.cpp  mesh_test.cpp  point_test.cc  rectangle_tests.cpp  segment_test.cc  segment_test.cpp  triangle_test.cc  triangle_tests.cpp
src/core/elements/: CMakeLists.txt  Polygon.h  Rectangle.cpp  Rectangle.h  Segment.cpp  Segment.h  Triangle.cpp  Triangle.h
src/core/oldies/: DomainMesh.h  FaceData.cpp  FaceData.h  Mesh2D.cpp  Mesh2D.h  Mesh3D.cpp  Mesh3D.h  SegmentData.h  element_utilities.cpp  element_utilities.h
src/elasticity/: BIE_elastostatic.h  BieElastostatic.h  CMakeLists.txt  PostProcessDDM.cpp  PostProcessDDM.h  PostProcessDDM_2d.cpp  PostProcessDDM_2d.h  PostProcessDDM_3d.cpp  PostProcessDDM_3d.h  bie_elastostatic.h  bie_elastostatic_mode1.h  jacobi_prec_assembly.cpp  jacobi_prec_assembly.h
src/elasticity/2d/: BIE_elastostatic_segment_0_impls.h  BIE_elastostatic_segment_1_impls.h  Elastic2DP1_element.cpp  Elastic2DP1_element.h  Elastic2D_segment.cpp  Elastic2D_segment.h  ElasticHMatrix2DP0.h  ElasticHMatrix2DP1.h  ElasticS3DP0_element.cpp  ElasticS3DP0_element.h  FullMatrixAssembly2D.cpp  FullMatrixAssembly2D.h
src/elasticity/3d/: BIE_elastostatic_triangle_0_impls.h  Elastic3DR0_common.cpp  Elastic3DR0_common.h  Elastic3DR0_element.cpp  Elastic3DR0_element.h  Elastic3DR0_mode1Cartesian_element.cpp  Elastic3DR0_mode1Cartesian_element.h  Elastic3DR0opening_element.cpp  Elastic3DR4_element.cpp  Elastic3DR4_element.h  Elastic3DT0_element.cpp  Elastic3DT0_element.h  Elastic3DT6_element.cpp  Elastic3DT6_element.h  ElasticHMatrix3DR0.h  ElasticHMatrix3DR0_displ.h  ElasticHMatrix3DR0_mode1Cartesian.h  constants.h  (+30 more)
src/elements/: CMakeLists.txt  boundary_element.h  point.cc  point.h  polygon.h  rectangle.h  segment.cc  segment.h  triangle.cc  triangle.h
src/examples/: CMakeLists.txt  build_hmat.cc  cnpy.cpp  cnpy.h  generate_penny_mesh.py  griffithcrack-2d.cpp  mat_vec.cc  mesh_conn.npy  mesh_coords.npy  rep_test.cpp  rep_test.py  rep_test_rowhmat.cpp
src/hmat/: CMakeLists.txt  Matrix.h  bie_matrix_generator.h  hierarchical_representation.h  square_matrix_generator.h
src/io/: CMakeLists.txt  bigwham_io.cc  bigwham_io.h  bigwham_io_gen.cc  bigwham_io_gen.h  bigwham_io_helper.cc  bigwham_io_helper.h
src/solvers/: HIterativeSolverUtilities.h
(+249 files in other folders)
